--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <link rel="icon" type="image/png" href="/favicon.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <title>Title</title>
-        <meta name="description" content="description" />
+        <title>Split Calculator</title>
+        <meta name="description" content="Calculate your erg split" />
 
-        <meta property="og:title" content="Title" />
+        <meta property="og:title" content="Split Calculator" />
         <meta property="og:type" content="website" />
-        <meta property="og:description" content="description" />
-        <meta property="og:image" content="/logo-256x256.png" />
+        <meta property="og:description" content="Calculate your erg split" />
+        <meta property="og:image" content="/logo.png" />
     </head>
     <body class="min-h-screen flex flex-col">
         <script type="module" src="/src/main.ts"></script>
