added dark mode + some refactoring

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="bg-zinc-50" lang="en">
+<html lang="en">
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/png" href="/favicon.svg" />
@@ -13,7 +13,9 @@
         <meta property="og:description" content="Calculate your erg split" />
         <meta property="og:image" content="/logo.png" />
     </head>
-    <body class="min-h-screen flex flex-col">
+    <body
+        class="min-h-screen flex flex-col bg-white dark:bg-zinc-800 transition-colors"
+    >
         <script type="module" src="/src/main.ts"></script>
     </body>
 </html>
