input validation + fixed colour of split pane

--- a/index.html
+++ b/index.html
@@ -2,16 +2,31 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/png" href="/favicon.svg" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <title>Split Calculator</title>
-        <meta name="description" content="Calculate your erg split" />
+        <meta name="title" content="Split Calculator" />
+        <meta
+            name="description"
+            content="Calculate your rowing and erg scores."
+        />
+        <meta
+            name="keywords"
+            content="rowing,split,erg,2k,2k calculator,split calculator,calculator"
+        />
 
-        <meta property="og:title" content="Split Calculator" />
+        <meta property="og:title" content="wordPractice" />
         <meta property="og:type" content="website" />
-        <meta property="og:description" content="Calculate your erg split" />
+        <meta
+            property="og:description"
+            content="Calculate your rowing and erg scores."
+        />
         <meta property="og:image" content="/logo.png" />
+        <meta
+            property="og:url"
+            content="https://split-calculator.principle.sh/"
+        />
     </head>
     <body
         class="min-h-screen flex flex-col bg-white dark:bg-zinc-800 transition-colors"
