--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             content="rowing,split,erg,2k,2k calculator,split calculator,calculator"
         />
 
-        <meta property="og:title" content="wordPractice" />
+        <meta property="og:title" content="Split Calculator" />
         <meta property="og:type" content="website" />
         <meta
             property="og:description"
