--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
         <meta name="title" content="Split Calculator" />
         <meta
             name="description"
-            content="Calculate your rowing and erg scores."
+            content="Plan out your rowing and erg scores."
         />
         <meta
             name="keywords"
-            content="rowing,split,erg,2k,2k calculator,split calculator,calculator"
+            content="rowing,split,erg,2k,2k calculator,split calculator,calculator,plan,planner,rowing plan,rowing planner,erg plan,erg planner"
         />
 
         <meta property="og:title" content="Split Calculator" />
         <meta property="og:type" content="website" />
         <meta
             property="og:description"
-            content="Calculate your rowing and erg scores."
+            content="Plan out your rowing and erg scores."
         />
         <meta property="og:image" content="/logo.png" />
         <meta
