--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
             property="og:url"
             content="https://split-calculator.principle.sh/"
         />
+
+        <script
+            defer
+            data-domain="split-calculator.principle.sh"
+            src="https://plausible.io/js/script.js"
+        ></script>
     </head>
     <body
         class="min-h-screen flex flex-col bg-white dark:bg-zinc-800 transition-colors"
