--- a/index.html
+++ b/index.html
@@ -23,16 +23,7 @@
             content="Plan out your rowing and erg scores."
         />
         <meta property="og:image" content="/logo.png" />
-        <meta
-            property="og:url"
-            content="https://split-calculator.principle.sh/"
-        />
-
-        <script
-            defer
-            data-domain="split-calculator.principle.sh"
-            src="https://plausible.io/js/script.js"
-        ></script>
+        <meta property="og:url" content="https://splitcalculator.com/" />
     </head>
     <body
         class="min-h-screen flex flex-col bg-white dark:bg-zinc-800 transition-colors"
