--- a/index.html
+++ b/index.html
@@ -24,6 +24,19 @@
         />
         <meta property="og:image" content="/logo.png" />
         <meta property="og:url" content="https://splitcalculator.com/" />
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=G-KT67XC7FDX"
+        ></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+
+            gtag("config", "G-KT67XC7FDX");
+        </script>
     </head>
     <body
         class="min-h-screen flex flex-col bg-white dark:bg-zinc-800 transition-colors"
