--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             async
             src="https://www.googletagmanager.com/gtag/js?id=G-KT67XC7FDX"
         ></script>
+        <script
+            async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7033471027209454"
+            crossorigin="anonymous"
+        ></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag() {
