--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="title" content="Split Calculator" />
         <meta
             name="description"
-            content="Plan out your rowing and erg scores."
+            content="The perfect way to plan out and calculate your rowing/erg piece."
         />
         <meta
             name="keywords"
@@ -20,7 +20,7 @@
         <meta property="og:type" content="website" />
         <meta
             property="og:description"
-            content="Plan out your rowing and erg scores."
+            content="The perfect way to plan out and calculate your rowing/erg piece."
         />
         <meta property="og:image" content="/logo.png" />
         <meta property="og:url" content="https://splitcalculator.com/" />
