--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7033471027209454"
             crossorigin="anonymous"
         ></script>
+        <meta name="google-adsense-account" content="ca-pub-7033471027209454" />
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag() {
