added editing total time and average split + some UI changes

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
         />
         <meta property="og:image" content="/logo.png" />
         <meta property="og:url" content="https://splitcalculator.com/" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+            rel="stylesheet"
+        />
+
         <script
             async
             src="https://www.googletagmanager.com/gtag/js?id=G-KT67XC7FDX"
