--- a/index.html
+++ b/index.html
@@ -24,13 +24,29 @@
         />
         <meta property="og:image" content="/logo.png" />
         <meta property="og:url" content="https://splitcalculator.com/" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
+
+        <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
-            rel="stylesheet"
+            rel="preload"
+            as="style"
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
         />
 
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
+            media="print"
+            onload="this.media='all'"
+        />
+        <noscript>
+            <link
+                rel="stylesheet"
+                href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
+            />
+        </noscript>
+
+        <!-- Google Analytics -->
         <script
             async
             src="https://www.googletagmanager.com/gtag/js?id=G-KT67XC7FDX"
