some minor ui changes

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </script>
     </head>
     <body
-        class="min-h-screen flex flex-col bg-white dark:bg-zinc-800 transition-colors"
+        class="min-h-screen flex flex-col bg-zinc-50 dark:bg-zinc-800 transition-colors"
     >
         <script type="module" src="/src/main.ts"></script>
     </body>
