--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <title>Split Calculator</title>
-        <meta name="title" content="Split Calculator" />
+        <title>Split Calculator - Rowing</title>
+        <meta name="title" content="Split Calculator - Rowing" />
         <meta
             name="description"
-            content="The perfect way to plan out and calculate your rowing/erg piece."
+            content="The perfect way to plan out and calculate your indoor rowing pieces. Calculate your average splits, distance and total time. Share your pieces with your friends and coaches."
         />
         <meta
             name="keywords"
-            content="rowing,split,erg,2k,2k calculator,split calculator,calculator,plan,planner,rowing plan,rowing planner,erg plan,erg planner"
+            content="rowing,split calculator,erg,ergometer,2k,2k calculator,indoor rowing,plan,planner,rowing plan,rowing planner,erg plan,erg planner"
         />
 
         <meta property="og:title" content="Split Calculator" />
         <meta property="og:type" content="website" />
         <meta
             property="og:description"
-            content="The perfect way to plan out and calculate your rowing/erg piece."
+            content="The perfect way to plan out and calculate your indoor rowing pieces. Calculate your average splits, distance and total time. Share your pieces with your friends and coaches."
         />
         <meta property="og:image" content="/logo.png" />
         <meta property="og:url" content="https://splitcalculator.com/" />
